--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,8 +1,8 @@
 :root {
   --primary: #fcfcfc;
-  --secondary: #9caea9;
+  --secondary: #2e64c7;
   --tertiary: #788585;
-  --light-dark: #6f6866;
+  --light-dark: #969595;
   --dark: #062c72;
   --border-radius: .3rem;
 }
@@ -48,6 +48,9 @@ p {
   font-size: 1.2rem;
 }
 
+
+
+
  .btn {
   font-size: 1.3rem;
   text-decoration:none;
@@ -59,10 +62,28 @@ p {
   color: var(--primary);
   border: none;
   outline: none;
+  background-color: var(--secondary);
+  box-shadow: 3px 3px var(--dark);
+  transform: translate(-1px, -1px);
+}
+
+button {
+  font-size: 1.3rem;
+  text-decoration:none;
+  padding: 6px 5px;
+  width: 100%;
+  display: block;
+  margin: 15px 0;
+  border-radius: var(--border-radius);
+  color: var(--primary);
+  border: none;
+  outline: none;
   background-color: var(--light-dark);
   box-shadow: 3px 3px var(--dark);
   transform: translate(-1px, -1px);
 }
+
+
 
  .btn:hover {
   color: var(--primary);
@@ -99,7 +120,7 @@ p {
 }
 
 .hero {
-  padding: 3% 4%;
+  padding: 10px;
   background-color: var(--dark);
   color: var(--primary);
   text-align: center;
@@ -117,12 +138,13 @@ p {
 }
 
 .list-group {
-  padding: 50px;
+  padding: 50px; 
   list-style: none;
   border-style: solid;
   border-color: black;
+  margin: 0px;
+  width: 900px;
 }
-
 
 
 li {
@@ -149,6 +171,8 @@ li {
 .icon-success {
   color: rgb(29, 153, 255);
 }
+
+
 
 /* CARDS */
 .card {
